--- a/app/src/main/res/layout/activity_medicine_details_page.xml
+++ b/app/src/main/res/layout/activity_medicine_details_page.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".medicine_details_page"
-    android:background="@color/white"
+    android:background="@color/doctor_card"
     android:gravity="center">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,6 +55,9 @@
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="20dp"
                 android:completionThreshold="1"
+                android:dropDownHeight="90dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:hint="Select Medicine" />
 
             <TextView
@@ -79,6 +82,9 @@
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="20dp"
                 android:completionThreshold="1"
+                android:dropDownHeight="90dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:hint="Select Duration" />
 
             <TextView
@@ -99,11 +105,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                android:gravity="center"
+                android:background="@color/white"
+                android:gravity="left"
                 android:orientation="horizontal">
 
                 <TextView
@@ -116,10 +123,14 @@
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="130dp"
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -133,13 +144,15 @@
 
                     <EditText
                         android:id="@+id/counter1"
-                        android:gravity="center"
                         android:layout_width="60dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_gravity="center"
-                        android:textSize="18dp"
                         android:layout_marginStart="6dp"
-                        android:layout_marginEnd="6dp" />
+                        android:layout_marginEnd="6dp"
+                        android:gravity="center"
+                        android:textSize="18dp"
+                        android:textColor="@color/black"
+                        />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="20dp"
@@ -151,12 +164,14 @@
                         android:textColor="@color/black" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -170,10 +185,14 @@
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="120dp"
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -187,12 +206,13 @@
 
                     <EditText
                         android:id="@+id/counter2"
-                        android:gravity="center"
                         android:layout_width="60dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginStart="6dp"
-                        android:layout_marginEnd="6dp" />
+                        android:layout_marginEnd="6dp"
+                        android:gravity="center"
+                        android:textColor="@color/black" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="20dp"
@@ -204,12 +224,14 @@
                         android:textColor="@color/black" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -223,10 +245,14 @@
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="130dp"
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -240,13 +266,14 @@
 
                     <EditText
                         android:id="@+id/counter3"
-                        android:gravity="center"
                         android:layout_width="60dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_gravity="center"
-                        android:textSize="18dp"
                         android:layout_marginStart="6dp"
-                        android:layout_marginEnd="6dp" />
+                        android:layout_marginEnd="6dp"
+                        android:gravity="center"
+                        android:textSize="18dp"
+                        android:textColor="@color/black"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="20dp"
@@ -258,12 +285,14 @@
                         android:textColor="@color/black" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginTop="1dp"
+                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -277,10 +306,14 @@
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="120dp"
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -294,12 +327,13 @@
 
                     <EditText
                         android:id="@+id/counter4"
-                        android:gravity="center"
                         android:layout_width="60dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginStart="6dp"
-                        android:layout_marginEnd="6dp" />
+                        android:layout_marginEnd="6dp"
+                        android:gravity="center"
+                        android:textColor="@color/black"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="20dp"
@@ -311,6 +345,54 @@
                         android:textColor="@color/black" />
                 </LinearLayout>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="20dp"
+                android:background="@color/white"
+                android:gravity="center"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:orientation="horizontal">
+                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:outlineAmbientShadowColor="@color/black">
+                <RadioButton
+                    android:id="@+id/before"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Before Meal"
+                    android:textColor="@color/black"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
+                <RadioButton
+                    android:id="@+id/after"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="After Meal"
+                    android:textColor="@color/black"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
+                </RadioGroup>
+            </LinearLayout>
+            
+            <Button
+                android:id="@+id/Add"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:text="ADD"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/btn_add"/>
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
